src/styles/_catalog.scss
$card-width: 200px;

.catalog {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax($card-width, 1fr));

  max-width: 944px;
  margin: 0 auto;
  gap: 48px;

  &__card {
    display: flex;
    justify-content: center;
    align-items: center;
    width: $card-width;
    height: 300px;
    border: 1px solid #ccc;
    border-radius: 5px;
  }
}

@media (max-width:487px) {
  .catalog__card:nth-child(n) {
    grid-column: 1;
  }
}

@media (min-width:488px) and (max-width:767px) {
  .catalog__card:nth-child(2n + 1) {
    grid-column: 1;
  }
}

@media (min-width:768px) and (max-width:1023px) {
  .catalog__card:nth-child(3n + 1) {
    grid-column: 1;
  }
}

@media (min-width:1024px) {
  .catalog__card:nth-child(4n + 1) {
    grid-column: 1;
  }
}

